2005-09-14  Derek Price  <derek@ximbiot.com>

	* edit.c (edit_usage): Add missing syntax.  Reword description for
	clarity.  Mention default behavior.

2005-09-13  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Split $username into $username & $username8.  Rename
	$author as $anyusername.

2005-09-12  Derek Price  <derek@ximbiot.com>

	* sanity.sh (binfiles-con1b): Back out accidental addition.

	* sanity.sh (username): Cut $username down to 8 characters when longer,
	since that is all that appears in output.

2005-09-07  Derek Price  <derek@ximbiot.com>

	Close <http://savannah.nongnu.org/bugs/?func=detailitem&item_id=14462>.
	* rcs.c (RCS_parse): Free variable *after* using it for the last time.

2005-09-06  Derek Price  <derek@ximbiot.com>

	* rcs.c (RCS_putdtree): Remove unused variable.

2005-09-06  Mark D. Baushke  <mdb@gnu.org>

	Close <https://savannah.nongnu.org/bugs/?func=detailitem&item_id=14435>.
	* rcs.c (RCS_putdtree): Avoid stack overflow which may be
	possible with excessive recursive calls to RCS_putdtree().
	(Patch from Serg Masyutin.)

2005-09-03  Derek Price  <derek@ximbiot.com>

	* add.c (add_usage): Standardize usage message somewhat.

2005-09-02  Larry Jones  <lawrence.jones@ugs.com>

	* commit.c (checkaddfile): Improve error messages for lock_RCS failure.
	* release.c (release): Improve error message for pclose failure.

	* root.h (struct cvsroot_s): Always declare isremote to simplify
	other code.  Simplify referencing code.
	* root.c (new_cvsroot_t): Always initialize isremote.
	* server.h: Always declare server_active to simplify other code.
	Simplify referencing code.
	* server.c: Always define server_active.

2005-09-01  Derek Price  <derek@ximbiot.com>

	* main.c, wrapper.c: Update links.

2005-09-01  Derek Price  <derek@ximbiot.com>

	* recurse.c: Update bug report email address.

2005-08-30  Larry Jones  <lawrence.jones@ugs.com>

	* import.c (import_descend): Lock repository directory during import.
